<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_reforms"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_reform_name" />
        <item
            android:id="@+id/nav_materials"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_material_name" />
        <item
            android:id="@+id/nav_budget"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_budget_name" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_tools_name" />
    </group>

    <item android:title="@string/nav_group">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_logout_name" />
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_exit_name" />
        </menu>
    </item>

</menu>
