<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txt_reform_item_room_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="@string/txt_reform_room"
        android:textSize="@dimen/text_size_20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_reform_item_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="76dp"
        android:textSize="@dimen/text_size_20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.383"
        app:layout_constraintStart_toEndOf="@+id/txt_reform_item_room_name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_reform_item_days_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/txt_reform_days"
        android:textSize="@dimen/text_size_20sp"
        app:layout_constraintStart_toStartOf="@+id/txt_reform_item_room_name"
        app:layout_constraintTop_toBottomOf="@+id/txt_reform_item_room_name" />

    <TextView
        android:id="@+id/txt_reform_item_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textSize="@dimen/text_size_20sp"
        app:layout_constraintStart_toStartOf="@+id/txt_reform_item_room"
        app:layout_constraintTop_toBottomOf="@+id/txt_reform_item_room" />

    <TextView
        android:id="@+id/txt_reform_item_budget_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/txt_reform_budget"
        android:textSize="@dimen/text_size_20sp"
        app:layout_constraintStart_toStartOf="@+id/txt_reform_item_days_name"
        app:layout_constraintTop_toBottomOf="@+id/txt_reform_item_days_name" />

    <TextView
        android:id="@+id/txt_reform_item_budget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textSize="@dimen/text_size_20sp"
        app:layout_constraintStart_toStartOf="@+id/txt_reform_item_days"
        app:layout_constraintTop_toBottomOf="@+id/txt_reform_item_days" />

</android.support.constraint.ConstraintLayout>